# Hard-Mode

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
resources/hardmodeLevels/: hardmode-1.txt  hardmode-10.txt  hardmode-11.txt  hardmode-12.txt  hardmode-13.txt  hardmode-2.txt  hardmode-3.txt  hardmode-4.txt  hardmode-5.txt  hardmode-6.txt  hardmode-7.txt  hardmode-8.txt  hardmode-9.txt
resources/hardmodeLevels/levels/: 1501.txt
src/: main.cpp
src/Hooks/: CurrencyRewardLayer.cpp  CurrencySprite.cpp  GameManager.cpp  LevelPage.cpp  LevelSelectLayer.cpp  LevelTools.cpp  LoadingLayer.cpp  LocalLevelManager.cpp  MenuLayer.cpp  OptionsLayer.cpp  PlayLayer.cpp  ProfilePage.cpp
src/Layers/: CreditsLayer.cpp  CreditsLayer.h  HardmodeSelectLayer.cpp  HardmodeSelectLayer.h
